--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Dutch fiction'
 - !lcc 'PT'
+- GITenberg
 title: Lente
 url: http://www.gutenberg.org/ebooks/18069
